# llmops_sadia_awan_mlo25

./: README.md  pyproject.toml
03_llm/: llm_intro_CODEALONG.ipynb  llmintro_CLASS.ipynb
04_pydanticai_structured_output/: mlops_class_exercise.ipynb  mlops_raw.txt  nackademin_contacts.txt  pydanticai_pydantic_model_HOME.ipynb  pydanticai_pydantic_models.ipynb  simulated _employees.md  simulated_employees.csv
05_pydanticai_fastapi/src/: movies_api.py
05_pydanticai_fastapi/src/data/: movies.duckdb
06_pydanticai_chatbot/: chat_agent_HOME.py  chat_eda.ipynb  chat_eda_HOME.ipynb  data_models_HOME.py  frontend_HOME.py
07_mlflow_llm_judge/: data_cleaning.ipynb  email_extractor.ipynb  email_extractor_HOME.ipynb  mlflow.db  prompt_creation.ipynb
09_lancedb/: constants.py  lancedb_basics.ipynb  lancedb_basics_HOME.ipynb
09_lancedb/knowledge_base/animals_text.lance/_transactions/: 0-a48f2ed0-c708-4625-863b-4747d3e4a58f.txn  1-7cbb7b54-9850-49c0-aed9-091fa05335b9.txn  2-9a362cc7-50f2-44f9-bc9a-0c5066953502.txn
09_lancedb/knowledge_base/articles.lance/_transactions/: 0-f4ffd9a1-6496-4fe4-badb-ce0a25b118b9.txn
09_lancedb/knowledge_base/jokes.lance/_transactions/: 0-68590276-fd5d-4dc9-a2e4-cdc28fdb09f1.txn  1-b3e1511c-c860-4cb7-9023-86a69da5905b.txn  (+2 more)
exercise/exercise_0/: exercise_0.0.ipynb  exercise_0.1.ipynb  exercise_0.2.ipynb  exercise_0.3.ipynb
exercise/exercise_0/markdown_exports/: jobad1.md
exercise/exercise_1/: agent.py  app.py  db.py  exercise_1.0.ipynb  exercise_1.1.ipynb  exercise_1.2.ipynb  frontend.py  mlflow.db  models.py  restaurants.db
