[project]
name = "llmops-sadia-awan-mlo25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "pydantic-ai>=1.77.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]


